Fixed error on a link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 
         {% if site.show_downloads %}
           <ul>
-            <li><a href="https://arslen.github.io/t-rex/downloads"><strong>Downloads page</strong></a></li>
+            <li><a href="https://hadyelsahar.github.io/t-rex/downloads"><strong>Downloads page</strong></a></li>
           </ul>
         {% endif %}
       </header>
